Configure React app for deployment to GitHub Pages

--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "resume",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://gsanchit01.github.io/Archit_portfolio/",
+  "homepage": "https://gsanchit01.github.io/Archit_portfolio",
   "dependencies": {
-    "gh-pages": "^4.0.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-scripts": "2.1.1"
@@ -15,7 +14,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-"deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -25,5 +24,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
+  }
 }
